--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.4",
+		"@types/node": "^13.11.1",
 		"nodemon": "^2.0.2",
 		"ts-node": "^8.8.2",
 		"tslint": "^6.1.1",
